--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'de.undercouch.download'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -67,6 +68,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
 
     // Navigation library
     def nav_version = "2.5.3"
@@ -98,4 +100,7 @@ dependencies {
 
     // MediaPipe Library
     implementation 'com.google.mediapipe:tasks-vision:0.10.0'
+
+    //Google Play Services
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 }
