--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,4 +103,8 @@ dependencies {
 
     //Google Play Services
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
+    //Firebase
+    implementation "com.google.firebase:firebase-bom:32.7.0"
+    implementation "com.google.firebase:firebase-firestore-ktx:24.10.0"
 }
