--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,11 +19,12 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'de.undercouch.download'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.google.mediapipe.examples.poselandmarker'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.poselandmarker"
@@ -107,4 +108,12 @@ dependencies {
     //Firebase
     implementation "com.google.firebase:firebase-bom:32.7.0"
     implementation "com.google.firebase:firebase-firestore-ktx:24.10.0"
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.7'
+
+    //Room
+    implementation 'androidx.room:room-runtime:2.6.1'
+    annotationProcessor('androidx.room:room-compiler:2.6.1')
+    kapt('androidx.room:room-compiler:2.6.1')
 }
