--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,4 +116,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.6.1'
     annotationProcessor('androidx.room:room-compiler:2.6.1')
     kapt('androidx.room:room-compiler:2.6.1')
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 }
