--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     //Firebase
     implementation "com.google.firebase:firebase-bom:32.7.0"
     implementation "com.google.firebase:firebase-firestore-ktx:24.10.0"
+    implementation "com.google.firebase:firebase-storage:20.3.0"
 
     //GSON
     implementation 'com.google.code.gson:gson:2.8.7'
