--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,4 +120,7 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+
+    //Bottom Toolbar
+    implementation 'com.google.android.material:material:1.11.0'
 }
